# ManipulatorsFeb2022-Students

./: README.md  TEC_FEB2022.Requirements.odt
17_02_2022/: .~lock.Activities notes.docx#  Activities notes.docx  Introduction to ROS.pptx  README.md
17_02_2022/catkin_A1_solution/src/basic_comms/launch/: coms.launch
17_02_2022/catkin_A2_template/: readme.md
17_02_2022/catkin_A2_template/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
17_02_2022/catkin_A2_template/devel/lib/pkgconfig/: puzzlebot_control.pc  puzzlebot_gazebo.pc  puzzlebot_world.pc  solution.pc
17_02_2022/catkin_A2_template/devel/lib/puzzlebot_control/: puzzlebot_control_node
17_02_2022/catkin_A2_template/devel/share/puzzlebot_control/cmake/: puzzlebot_controlConfig.cmake
17_02_2022/catkin_A2_template/src/puzzlebot_gazebo/src/: tf_map.py
17_02_2022/catkin_A2_template/src/solution/: CMakeLists.txt  package.xml
17_02_2022/catkin_A2_template/src/solution/rospy/: package.xml
17_02_2022/catkin_A2_template/src/solution/src/: square.py
17_02_2022/catkin_custom_msg_example/: readme.md
24_02_2022/: README.md
24_02_2022/solution_ws/src/puzzlebot_world/worlds/: room.world
24_02_2022/ws/devel/: .catkin  local_setup.sh
24_02_2022/ws/devel/lib/pkgconfig/: puzzlebot_control.pc  puzzlebot_gazebo.pc  puzzlebot_world.pc
24_02_2022/ws/src/puzzlebot_control/: CMakeLists.txt
24_02_2022/ws/src/puzzlebot_gazebo/launch/: spawn_puzzlebot_gazebo.launch
24_02_2022/ws/src/puzzlebot_gazebo/urdf/: macros.xacro  puzzlebot.gazebo  puzzlebot.xacro
(+6 files in other folders)
